# gameOfLife

./: .gitignore  CMakeLists.txt  README.md  main.c
resources/: grid.txt
src/: board.c  board.h  graphics.c  graphics.h  history.c  history.h  rules.c  rules.h
